# fibonacci_generator

./: Cargo.toml  README.md
src/: fibonacci-generator.rs  fibonacci-interactive.rs  lib.rs
