[package]
name = "fibonacci_generator"
version = "0.2.1"
authors = ["Michael Berry <trismegustis@gmail.com>"]
edition = "2021"

[lib]
name = "fibonacci"
path = "src/lib.rs"

[[bin]]
name = "fibonacci-generator"
path = "src/fibonacci-generator.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
num-format = "0.4.0"
